Adding the loader section (in progress honestly/ not yet working)

--- a/angular-gui/src/index.html
+++ b/angular-gui/src/index.html
@@ -1,14 +1,34 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularGui</title>
-  <base href="/">
 
+<head>
+  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ConnorAtherton/loaders.css/master/loaders.min.css">
+  <link rel="stylesheet" href="/assets/css/loaders-e624c0a053.css"> -->
+  <meta charset="utf-8">
+  <title>WMS App</title>
+
+  <!-- <link rel="stylesheet" type="scss" href="./loaders.scss" /> -->
+  <link rel="stylesheet" type="css" href="./loaders.css" />
+  <!-- <link rel="stylesheet" type="css.js" href="./loaders.css.js" /> -->
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+
+
+  <app-root>
+    <div class="loaders">
+      <div class="loader">
+        <div class="line-scale">
+          Loading the application assets
+        </div>
+      </div>
+    </div>
+  </app-root>
+
+
 </body>
+
 </html>
