Added changes in examplatory data + loader at Init

--- a/angular-gui/src/index.html
+++ b/angular-gui/src/index.html
@@ -2,29 +2,37 @@
 <html lang="en">
 
 <head>
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ConnorAtherton/loaders.css/master/loaders.min.css">
-  <link rel="stylesheet" href="/assets/css/loaders-e624c0a053.css"> -->
   <meta charset="utf-8">
-  <title>WMS App</title>
+  <title>WMS Application</title>
 
   <!-- <link rel="stylesheet" type="scss" href="./loaders.scss" /> -->
-  <link rel="stylesheet" type="css" href="./loaders.css" />
-  <!-- <link rel="stylesheet" type="css.js" href="./loaders.css.js" /> -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="saturn.ico">
 </head>
 
 <body>
 
 
   <app-root>
-    <div class="loaders">
-      <div class="loader">
-        <div class="line-scale">
-          Loading the application assets
-        </div>
+    <div class="centralized">
+      <div class="lds-spinner">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
+      <p class ='middled_text'>
+        Loading the application assets
+      </p>
     </div>
   </app-root>
 
